# chess

./: Cargo.toml  pertf.md
chess-ai/: Cargo.toml
chess-ai/src/: chess.rs  eval.rs  lib.rs  minimax.rs  montecarlo.rs
chess-cli/: Cargo.toml
chess-cli/src/: board.rs  main.rs
chess-lib/: Cargo.toml
chess-lib/src/: board.rs  fen.rs  fmt.rs  game.rs  lib.rs  magic.rs  moves.rs  perft.rs  pgn.rs  tt.rs  types.rs  zobrist.rs
chess-lib/tests/: chaos.rs
