[package]
name = "chess-cli"
version = "0.1.0"
authors = ["Ryan Norris <rnorris@palantir.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-ai = { path = "../chess-ai" }
chess-lib = { path = "../chess-lib" }
clap = "3.0.0-beta.2"
crossbeam = "^0.7.3"
rand = "0.8.3"
termion = "1.5"
threadpool = "^1.7.1"
tui = "0.15"
